<resources>
    <string name="app_name">Continuada02</string>
    <string name="tv_titulo">Quero Minha Vaga</string>
    <string name="tv_cadastro">Cadastro</string>
    <string name="et_nickName">Nome de usuário</string>
    <string name="et_nome">Nome</string>
    <string name="et_sobre_nome">Sobre Nome</string>
    <string name="et_email">Email</string>
    <string name="et_idade">Idade</string>
    <string name="bt_cadastrar">Cadastrar</string>
    <string name="tv_bemVindo">Bem Vindo</string>
    <string name="tv_texto_tela_vagas">Estás são as vagas disponíveis!</string>
    <string name="txt_vagas">Empresa: %1$s%n
                             Cargo: %2$s%n
                             Número de Vagas: %3$d%n
                             Endereço: %4$s%n
                             Remuneração salarial: %5$.2f%n</string>
    <string name="texto_idadeInvalida">Desculpe! Somente vagas para CLT</string>
    <string name="texto_campoVazio">Preencha todos os campos</string>
</resources>